fix(assets): use relative assets path to avoid 404 error behind a reverse proxy and context-path
This closes #108

--- a/gravitee-am-ui/src/styles.scss
+++ b/gravitee-am-ui/src/styles.scss
@@ -82,7 +82,7 @@ body {
 }
 
 .gravitee-splash-screen {
-  background: rgb(45, 50, 62) url('./assets/gravitee_logo_anim.gif') no-repeat center center;
+  background: rgb(45, 50, 62) url('assets/gravitee_logo_anim.gif') no-repeat center center;
   bottom: 0;
   left: 0;
   position: absolute;
